# eez-framework

./: CMakeLists.txt  idf_component.yml
examples/esp_ui_phone_p4_function_ev_board/main/: CMakeLists.txt  idf_component.yml  main.c
examples/esp_ui_phone_p4_function_ev_board/main/ui/: flow_def.c  flow_def.h  fonts.h  images.h  screens.c  structs.h  ui_font_bold_17.c  ui_font_bold_21.c  ui_font_bold_23.c  ui_font_regular_16.c  ui_font_regular_21.c  ui_font_regular_36.c  ui_image_account_box.c  ui_image_arrow_account.c  ui_image_arrow_account_hoover.c  ui_image_arrow_next.c  ui_image_arrow_next_hover.c  ui_image_arrow_prev.c  ui_image_arrow_prev_hoover.c  ui_image_big_checkmark.c  ui_image_button_main.c  ui_image_checkmark.c  ui_image_face_0.c  ui_image_face_1.c  ui_image_face_2.c  ui_image_garage_arrows.c  ui_image_garage_arrows_hoover.c  ui_image_header_menu.c  ui_image_heating_button.c  ui_image_heating_button_hoover.c  ui_image_lighting_button.c  ui_image_lighting_button_hoover.c  ui_image_power_background.c  ui_image_save.c  ui_image_saved.c  ui_image_security_button.c  ui_image_security_button_hoover.c  ui_image_slider_indicator.c  ui_image_slider_knob.c  ui_image_slider_lighting.c  (+4 more)
